# Kingdoms

./: .gitignore  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  readme.md  template.env
metrics/grafana/dashboards/: Rooms-1741599633638.json  rooms.json
metrics/prometheus/: prometheus.yml
services/api-gateway/dockerization/: site.conf
services/auth/: .gitignore  mypy.ini  pyproject.toml  setup.cfg
services/auth/dockerization/: Dockerfile  db_init.sh  db_init.sql  prod.Dockerfile  prod.requirements.txt
services/auth/src/: alembic.ini  logger.py  main.py  settings.py
services/auth/src/api/v1/: __init__.py  auth.py  users.py
services/auth/src/app_types/: common.py
services/auth/src/auth_flow/: __init__.py  base.py  github.py  yandex.py
services/auth/src/dependencies/: auth.py  common.py  profile.py  store.py  token.py  user.py
services/auth/src/migrations/: env.py
services/auth/src/migrations/versions/: 172c7a717cb7_update_models.py  51f0306fa3e9_update_models.py  8a791a70ef38_login_history.py  948b122b46fe_update_models.py  9769db21c596_update.py  98bdf2c16ff5_initial_revision.py
services/auth/src/models/: auth.py  base.py
services/auth/src/repositories/: auth.py  base.py  profile.py  user.py
services/auth/src/repositories/auth/: __init__.py  token.py  user.py
services/auth/src/router/api/v1/: __init__.py  auth.py  profile.py
services/auth/src/schemas/: auth.py  profile.py  user.py
services/auth/src/services/: __init__.py  auth.py  exeptions.py  profile.py
services/auth/src/services/auth/: __init__.py  login.py  token.py  user.py
services/auth/src/services/auth/oauth_flow/: __init__.py  github.py  yandex.py
services/auth/src/stores/: pg.py  redis.py
services/auth/src/tasks/: __init__.py  profile.py  user.py
services/cabinet/: .gitignore  pyproject.toml
services/cabinet/dockerization/: initCabinet.js
services/cabinet/src/: logger.py  main.py  settings.py
services/cabinet/src/dependencies/: store.py
services/cabinet/src/router/api/v1/: __init__.py  cabinet.py
services/cabinet/src/schemas/: map.py  room.py
services/cabinet/src/services/: map.py  rooms.py
services/cabinet/src/stores/: mongo.py
services/cabinet/src/tests/: .env.test  conftest.py  test_api_v1.py
services/front/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js
services/front/dockerization/: Dockerfile  prod.Dockerfile  prod.conf.template
services/front/src/: App.tsx  config.ts  index.css  index.tsx
services/front/src/api/: axios.ts
services/front/src/components/: CastleIcon.tsx  Chat.tsx  ColorSelector.tsx  ErrorMessage.tsx  FieldIcon.tsx  GameBoard.tsx  GameStats.tsx  KingIcon.tsx  LoadingSpinner.tsx  LoginGithubButton.tsx  LoginYandexButton.tsx  MapEditor.tsx  MapInfo.tsx  MapList.tsx  MapPreview.tsx  Navbar.tsx  PlayersList.tsx  ProtectedRoute.tsx  RoomsList.tsx  ShareLink.tsx  SpawnIcon.tsx  TutorialPopup.tsx  UserMenu.tsx
services/front/src/layouts/: Nav.tsx
services/front/src/pages/: CreateMap.tsx  Home.tsx  Login.tsx  Maps.tsx  NotFound.tsx  Redirect.tsx  (+1 more)
services/media/dockerization/: base.nginx.conf  dev.conf.template  dev.nginx.conf  prod.nginx.conf
services/rooms/: pyproject.toml  setup.cfg
services/rooms/dockerization/: Dockerfile  dev.Dockerfile
services/rooms/src/: logger.py  main.py  metrics.py  settings.py  utils.py
services/rooms/src/app_types/: common.py  in_messages.py  map.py  messages.py  out_messages.py  room.py
services/rooms/src/dependencies/: profile.py  store.py
services/rooms/src/exceptions/: player.py  room.py
services/rooms/src/repositories/: room.py
services/rooms/src/router/api/v1/: __init__.py  rooms.py
services/rooms/src/router/ws/: __init__.py  rooms.py
services/rooms/src/schemas/: map.py  room.py
services/rooms/src/services/: auth.py  player.py  room.py
services/rooms/src/services/room/: __init__.py  game_loop.py  game_room.py  game_states.py  map_manager.py  room_manager.py  strategies.py  territory_manager.py
services/rooms/src/stores/: redis.py
(+5 files in other folders)
