[tool.poetry]
name = "rooms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
orjson = "^3.10.15"
sqids = "^0.5.1"
redis = "^5.2.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
tenacity = "^9.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.22.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
